# c_matrix_library

./: .clang-format  .gitignore  Dockerfile  Doxyfile  README.md  README_8md.html  README_8md_source.html  annotated.html  classes.html  codecov.yaml  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_997f231acc4668b3102fb3462a40d8b6.html  environment.yml  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  main_8c_source.html  matrix__math_8c.html  matrix__math_8c__incl.dot  matrix__math_8c__incl.map  matrix__math_8c__incl.md5  matrix__math_8c_source.html  matrix__math_8h.html  matrix__math_8h__dep__incl.dot  matrix__math_8h__dep__incl.map  matrix__math_8h__dep__incl.md5  matrix__math_8h_source.html  menudata.js  meson.build  (+2 more)
.github/workflows/: doxygen-publish.yml  main.yml
scripts/: clang_format.sh  clang_format_check.sh  constants.env  cppcheck_check.sh  docker_container_run.sh  docker_container_stop.sh  docker_image_build.sh  docker_load_image.sh  docker_project_build.sh  docker_project_clang_format.sh  docker_project_clang_format_check.sh  docker_project_cppcheck.sh  docker_project_doxygen.sh  docker_project_test.sh  docker_run_container.sh  docker_save_image.sh  doxygen_generate.sh  run_tests.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
src/: main.c  matrix_math.c  matrix_math.h  meson.build
src/matrix_math/: matrix_math.c  matrix_math.h  meson.build
test/: meson.build  minunit.h  test_add.c  test_cholesky.c  test_copy.c  test_getcolumn.c  test_identity.c  test_init.c  test_mult.c  test_ones.c  test_print.c  test_scale.c  test_setcolumn.c  test_sub.c  test_trace.c  test_trans.c  test_zeros.c
