# About: Project root Meson build configuration.
# Author: Ivan Vnucec
# License WTFPL – Do What the Fuck You Want to Public License. See LICENSE.md file for more information.

project('c_matrix_library', 'c', default_options: ['c_std=c99'])

# Build library
subdir('src')

# Test library
subdir('test')
